--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="navbar-translate">
         <!-- Just an image -->
         <a class="navbar-brand" href="/" rel="tooltip" title="" data-placement="bottom">
-        <img src="/images/cropped-KeL_Logo_tr.png" width="90" height="90" alt="">
+        <img src="cdn.beatsmusic.ga/Beatstr.png" width="90" height="90" alt="">
           <span>Beats</span>
         </a>
         </div>
@@ -63,7 +63,7 @@
 			<div class="notfound-404">
         <h1></h1>
         <h2>Under</h2>
-        <img src="/images/gif/maintenance.gif" width="300" height="250" alt="">
+        <img src="https://beatsmusic.ga/images/gif/maintenance.gif" width="300" height="250" alt="">
         <h2>Maintenance</h2>
 			</div>
 			<br/>
