--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/cropped-KeL_Logo_tr.png">
-  <link rel="icon" type="image/png" href="/images/cropped-KeL_Logo_tr.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.beatsmusic.ga/Beats.png">
+  <link rel="icon" type="image/png" href="https://cdn.beatsmusic.ga/Beats.png">
   <!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
@@ -43,7 +43,7 @@
       <div class="navbar-translate">
         <!-- Just an image -->
         <a class="navbar-brand" href="/" rel="tooltip" title="" data-placement="bottom">
-        <img src="cdn.beatsmusic.ga/Beatstr.png" width="90" height="90" alt="">
+        <img src="https://cdn.beatsmusic.ga/Beatstr.png" width="90" height="90" alt="">
           <span>Beats</span>
         </a>
         </div>
