--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
       <div class="navbar-translate">
         <!-- Just an image -->
-        <a class="navbar-brand" href="/" rel="tooltip" title="" data-placement="bottom">
+        <a class="navbar-brand" href="https://beatsmusic.ga" rel="tooltip" title="" data-placement="bottom">
         <img src="https://cdn.beatsmusic.ga/Beatstr.png" width="90" height="90" alt="">
           <span>Beats</span>
         </a>
