--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
   <!-- CSS Files -->
   <link href="https://cdn.jsdelivr.net/gh/hafisroshan/shop.kewlbot.ga-homepage@master/css/main.css" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
-
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="0b08914c-1c39-4a82-9330-8ef8cd645efd";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </head>
 
 <body class="landing-page">
