--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<div class="notfound-404">
         <h1></h1>
         <h2>Under</h2>
-        <img src="/maintenance.gif" width="300" height="250" alt="">
+        <img src="https://cdn.beatsmusic.ga/attachments/beatsmusic.ga/maintenance.gif" width="300" height="250" alt="">
         <h2>Maintenance</h2>
 			</div>
 			<br/>
