edit: beatsmusic.ga to beatsbot.in

--- a/404.html
+++ b/404.html
@@ -4,26 +4,26 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.beatsmusic.ga/Beats.png">
-  <link rel="icon" type="image/png" href="https://cdn.beatsmusic.ga/Beats.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.beatsbot.in/Beats.png">
+  <link rel="icon" type="image/png" href="https://cdn.beatsbot.in/Beats.png">
   <!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato:400" rel="stylesheet">
 
 	<!-- Font Awesome Icon -->
-	<link type="text/css" rel="stylesheet" href="https://cdn.beatsmusic.ga/attachments/beatsmusic.ga/css/font-awesome.min.css" />
+	<link type="text/css" rel="stylesheet" href="https://cdn.beatsbot.in/attachments/beatsbot.in/css/font-awesome.min.css" />
 
 	<!-- Custom stlylesheet -->
-	<link type="text/css" rel="stylesheet" href="https://cdn.beatsmusic.ga/attachments/beatsmusic.ga/css/style.css" />
+	<link type="text/css" rel="stylesheet" href="https://cdn.beatsbot.in/attachments/beatsbot.in/css/style.css" />
   <title>
     Beats is Under Maintenance
   </title>
-  <meta property="og:image" content="https://cdn.beatsmusic.ga/Beats.png">
+  <meta property="og:image" content="https://cdn.beatsbot.in/Beats.png">
     <meta name="title" content="Beats - The Music Bot">
     <meta name="description" content="Beats, the perfect music bot for your server. Beats brings to your servers all premium features free of cost.">
 
-<meta name="keywords" content="Beats, Discord Bot, Music Bot, Best Music Bot, KewL, beatsmusic.ga, discord music, discord bot free, discord youtube bot, discord soundcloud bot, discord spotify bot">
+<meta name="keywords" content="Beats, Discord Bot, Music Bot, Best Music Bot, KewL, beatsbot.in, discord music, discord bot free, discord youtube bot, discord soundcloud bot, discord spotify bot">
 <meta name="robots" content="index, follow">
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
@@ -31,7 +31,7 @@
   <!-- Nucleo Icons -->
 
   <!-- CSS Files -->
-  <link href="https://cdn.beatsmusic.ga/attachments/beatsmusic.ga/css/main.css" rel="stylesheet" />
+  <link href="https://cdn.beatsbot.in/attachments/beatsbot.in/css/main.css" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="0b08914c-1c39-4a82-9330-8ef8cd645efd";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </head>
@@ -43,7 +43,7 @@
       <div class="navbar-translate">
         <!-- Just an image -->
         <a class="navbar-brand" href="/" rel="tooltip" title="" data-placement="bottom">
-        <img src="https://cdn.beatsmusic.ga/Beatstr.png" width="90" height="90" alt="">
+        <img src="https://cdn.beatsbot.in/Beatstr.png" width="90" height="90" alt="">
           <span>Beats</span>
         </a>
         </div>
@@ -63,7 +63,7 @@
 			<div class="notfound-404">
         <h1></h1>
         <h2>Under</h2>
-        <img src="https://cdn.beatsmusic.ga/attachments/beatsmusic.ga/maintenance.gif" width="300" height="250" alt="">
+        <img src="https://cdn.beatsbot.in/attachments/beatsbot.in/maintenance.gif" width="300" height="250" alt="">
         <h2>Maintenance</h2>
 			</div>
 			<br/>
